test/Vehicle/Test/CompileMode/Error/ParsingErrors/invalidAnnotationParameterValue.vcl
@parameter(implicit=xsd)
epsilon : Rat